[package]
name = "debian-repro-status"
version = "0.2.0"
description = "Check the reproducibility status of your installed Debian packages"
authors = [
    "kpcyrd <git@rxv.cc>",
    "Orhun Parmaksız <orhun@archlinux.org>",
]
license = "MIT"
repository = "https://github.com/kpcyrd/debian-repro-status"
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.17"
rebuilderd-common = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls-native-roots"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }
