[package]
name = "debian-repro-status"
version = "0.3.1"
description = "Check the reproducibility status of your installed Debian packages"
authors = [
    "kpcyrd <git@rxv.cc>",
    "Orhun Parmaksız <orhun@archlinux.org>",
]
license = "MIT"
repository = "https://github.com/kpcyrd/debian-repro-status"
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "3"
indicatif = "0.18"
rebuilderd-common = "0.25"
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "rustls"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread"] }
